# 2024IKCEST

./: .gitignore  README.md  config.py  example.yaml  generate_video.py  pyproject.toml  requirements.txt  server.py  work.py
.well-known/: ai-plugin.json  openapi.yaml
GHOST/: rename.py  rescale.py
GHOST/TrackEvalForGHOST/trackeval/datasets/: bdd100k.py  head_tracking_challenge.py  kitti_2d_box.py  mot_challenge_2d_box.py
GHOST/config/: config_tracker_20.yaml
GHOST/data/: splits.py
GHOST/scripts/: main_20.sh
GHOST/src/: eval_track_eval.py  eval_track_eval_bdd.py  tracking_utils.py
GHOST/src/datasets/: MOT17_parser.py  TrackingDataset.py
GHOST/utils/GPU-Re-Ranking/: utils.py
PaddleDetection/configs/datasets/: mcmot.yml
YIYAN/: config.py  example.yaml  frame_worker.py  gen_event_flow.py  msg_content.yaml  rebuild.py  requirements.txt  server.py  team_identifier.py  video_capture.py  video_worker.py  work.py
YIYAN/.ipynb_checkpoints/: work-checkpoint.py
YIYAN/.well-known/: ai-plugin.json  openapi.yaml
YIYAN/tasks/: tasks.json
YIYAN/video_download/: get_web_video.py
YIYAN/video_process/: __init__.py  video_capture.py
YOLOX/: get_dets.py
YOLOX/exps/example/custom/: my.py
docs/: pipeline.typ
docs/slide/: data.typ  main.typ  theme.typ
jersey-number-pipeline/: centroid_reid.py  helpers.py  main.py  team_identifier.py
video_download/: get_web_video.py
video_process/: __init__.py  video_capture.py
video_process/.ipynb_checkpoints/: video_capture-checkpoint.py
work/dataset/: label_list.txt
(+3 files in other folders)
