[tool.poetry]
name = "2024ikcest"
version = "0.1.0"
description = ""
authors = ["ParaN3xus <paran3xus007@gmail.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
lapx = "^0.5.10.post1"
pycocotools = "^2.0.8"
numba = "^0.60.0"
paddlepaddle-gpu = "^2.6.1"

visualdl = ">=2.2.0"
opencv-python = "<=4.6.0"

sklearn = "==0.0"
imgaug = ">=0.4.0"
pyyaml = "^6.0.2"
shapely = "^2.0.6"
scipy = "^1.14.1"
tqdm = "^4.66.5"
typeguard = "^4.3.0"
terminaltables = "^3.1.10"
cython = "^3.0.11"
setuptools = "^74.0.0"
pillow = "^10.4.0"
pyclipper = "^1.3.0.post5"
motmetrics = "^1.4.0"
paddledet = {path = "PaddleDetection"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
